# VermellData

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: purpleair_api.py
dashboard/: app.py
scripts/: ingest_once.py
src/vermelldata/: client.py  db.py  settings.py
src/vermelldata/db/: conn.py
src/vermelldata/etl/: ingest.py
src/vermelldata/io/: purpleair_client.py
vermelldata/: __init__.py  pull.py  sensor_group.txt
